# flo

./: .gitlab-ci.yml  Cargo.toml  README.md  build.rs  config-byo-tilta.yaml  config-byo.yaml  config-drone.yaml  config-mini.yaml  dji-o3-goggles2-calibration.yaml  setup-imops-byo.bat  setup-imops-drone.sh
crates/flo-bui/: Cargo.toml  build.bat  build.sh
crates/flo-bui/scss/: style.scss
crates/flo-bui/src/: lib.rs  recording_path.rs
crates/flo-bui/static/: index.html
crates/flo-core/: Cargo.toml
crates/flo-core/src/: backwards_compat.rs  drone_structs.rs  events.rs  focus.rs  lib.rs  linear_observation_model.rs  math.rs  motion_model.rs  osd_structs.rs  utils.rs
crates/flo-mavlink/: Cargo.toml
crates/flo-mavlink/mavlink-dump/: Cargo.toml
crates/flo-mavlink/mavlink-dump/src/: main.rs
crates/flo-mavlink/src/: lib.rs  px4-mode-numbers.txt
crates/flo-webserver/: Cargo.toml
crates/flo-webserver/src/: lib.rs
crates/osd-displayport/: Cargo.toml
crates/osd-displayport/src/: displayport_messages.rs  lib.rs  msp_codec.rs
crates/osd-utils/: Cargo.toml
crates/osd-utils/src/: lib.rs
crates/platform-uuid/: Cargo.toml  build.rs
crates/platform-uuid/src/: lib.rs  linux.rs  macos.rs  uuid-macos.c  windows.rs
crates/pwm-motor-types/: Cargo.toml
crates/pwm-motor-types/src/: lib.rs
crates/sbgc-gimbal/: Cargo.toml
crates/sbgc-gimbal/src/: custom_messages.rs  lib.rs
crates/simplebgc/: Cargo.toml
crates/simplebgc-derive/: Cargo.toml  README.md
crates/simplebgc-derive/src/: field.rs  lib.rs  primitive.rs
crates/simplebgc-derive/tests/: test_derive.rs
crates/simplebgc/src/: lib.rs  message.rs  payload.rs
crates/simplebgc/src/commands/: board_info.rs  cmd_response.rs  constants.rs  control.rs  get_angles.rs  macros.rs  mod.rs  motors_off.rs  raw_message.rs  read_params.rs  realtime.rs
crates/simplebgc/src/data/: mod.rs  rpy.rs
crates/tilta-dongle-comms/: Cargo.toml
crates/tilta-dongle-comms/src/: lib.rs
crates/tokio-mavlink/: Cargo.toml
crates/tokio-mavlink/src/: lib.rs
crates/trinamic/: Cargo.toml
crates/trinamic/examples/: simple.rs
crates/trinamic/src/: lib.rs
firmware/beamdriver/: Cargo.toml  README.md
firmware/beamdriver/src/: main.rs
firmware/flo-tilta-dongle/: Cargo.toml  README.md  rust-toolchain.toml
firmware/flo-tilta-dongle/src/: main.rs
firmware/on-gimbal-beamdriver/: Cargo.toml  README.md
firmware/on-gimbal-beamdriver/.cargo/: config.toml
firmware/on-gimbal-beamdriver/src/: main.rs
firmware/rpipico-pantilt/: Cargo.toml  README.md
firmware/rpipico-pantilt/.cargo/: config.toml
rpipico-pantilt/: Cargo.toml  send-json-line.py
rpipico-pantilt/src/: main.rs
src/: codec.rs  json_lines_writer.rs  main.rs  osd.rs  osd_utils.rs  pwm_serial_io.rs  tilta_io.rs  tracking.rs  trinamic_io.rs  udp_codec.rs  udp_handling.rs  writing_state.rs  zip_dir.rs
tilta-dongle-firmware/: Cargo.toml  README.md
tilta-dongle-firmware/src/: main.rs
