[package]
edition = "2021"
name = "flo-tilta-dongle"
version = "0.1.1"
authors = ["DeepSOIC <vv.titov@gmail.com>"]
resolver = "2"

[dependencies]
tilta-dongle-comms = { path = "../crates/tilta-dongle-comms" }

static_cell = { version = "2" }
num-traits = { version = "0.2.18", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde-json-core = { version = "0.5.1", default-features = false }
heapless = { version = "0.8.0", features = ["defmt-03"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-4096",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
    "executor-interrupt",
] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }


cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-nrf = { version = "0.1.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }

# patch to a92a73abe46967a9ca511aa21265b7c338e11c6f to have radio
[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "a92a73abe46967a9ca511aa21265b7c338e11c6f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "a92a73abe46967a9ca511aa21265b7c338e11c6f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a92a73abe46967a9ca511aa21265b7c338e11c6f" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "a92a73abe46967a9ca511aa21265b7c338e11c6f" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "a92a73abe46967a9ca511aa21265b7c338e11c6f" }
