[package]
name = "flo-bui"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
js-sys = "0.3"
gloo-timers = "0.3.0"
gloo-events = "0.2.0"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.58"
wasm-bindgen-futures = "0.4"
log.workspace = true
wasm-logger = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
chrono = { workspace = true, features = ["clock", "std", "wasmbind"] }

serde_json.workspace = true
serde_yaml.workspace = true
serde_path_to_error = "0.1.16"

yew-tincture = "0.2.2"

flo-core = { path = "../flo-core", default-features = false }

[dependencies.web-sys]
version = "0.3.72"
features = [
    "DomRect",
    "DomTokenList",
    "Element",
    "Event",
    "EventSource",
    "Gamepad",
    "GamepadButton",
    "GamepadEvent",
    "Headers",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "MessageEvent",
    "Navigator",
    "Request",
    "RequestCache",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
