[package]
name = "flo-core"
description = "Common definitions"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"

[dependencies]
thiserror.workspace = true
eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
    "rt",
    "macros",
    "sync",
], optional = true }
if-addrs = { workspace = true, optional = true }
socket2 = { version = "0.5.5", optional = true }
chrono = { workspace = true, features = ["serde", "clock"] }
nalgebra.workspace = true
adskalman.workspace = true
const_format = { version = "0.2.30", default-features = false }
pwm-motor-types.workspace = true
num = "0.4.3"
num-derive.workspace = true
num-traits.workspace = true
opencv-ros-camera = { version = "0.14.0", features = ["serde-serialize"] }
cam-geom = "0.14.0"

[dev-dependencies]
rand = "0.6.3"
approx = "0.5"
chrono = { workspace = true, default-features = true }
csv = "1.3.0"

[features]
default = ["full"]
# `full` includes things that require platform support like the socket2 crate
# and UDP support. These cannot be expected from all platforms with std, such as
# wasm.
full = ["if-addrs", "tokio", "socket2"]
