[package]
name = "flo-mavlink"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
mavlink = { version = "0.12.2", default-features = false, features = [
    "ardupilotmega",
    "serde",
] }
tokio = { version = "1", features = ["macros", "net", "sync", "time"] }
tracing = "0.1.40"
chrono = "0.4.23"
num-traits = "0.2.18"
serde_json = "1.0.116"
serialport = "4.4.0"

flo-core = { path = "../flo-core" }
tokio-mavlink = { path = "../tokio-mavlink" }
