[package]
name = "flo-mavlink"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
mavlink = { workspace = true, features = ["ardupilotmega", "serde"] }
tokio = { workspace = true, features = ["macros", "net", "sync", "time"] }
tracing.workspace = true
chrono = { workspace = true, default-features = true }
num-traits.workspace = true
serde_json.workspace = true
serialport = "4.4.0"

flo-core = { workspace = true, default-features = true }
tokio-mavlink.workspace = true
