[package]
name = "flo-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
eyre = "0.6.12"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread"] }
http = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.7.2"
axum-token-auth = "0.1.2"
if-addrs = "0.11"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
preferences-serde1 = "2.0.0"
cookie = "0.18.0"
base64 = "0.12"
futures-util = "0.3.30"
qrcodegen = "1.8.0"
tower-serve-static = { version = "0.1", optional = true }
include_dir = { version = "0.7.3", optional = true }

flo-core = { path = "../flo-core" }
futures = "0.3.30"

[features]
default = ["bundle_files"]

# Serve style
## Bundle files into executable
bundle_files = ["tower-serve-static", "include_dir"]
## Serve files from disk at runtime
serve_files = []
