[package]
name = "flo-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["net", "sync", "rt-multi-thread"] }
http = "1"
tokio-stream = { workspace = true, features = ["sync"] }
axum.workspace = true
axum-token-auth = "0.1.2"
if-addrs.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
preferences-serde1.workspace = true
cookie = "0.18.0"
base64 = "0.12"
futures-util = "0.3.30"
qrcodegen = "1.8.0"
tower-serve-static = { version = "0.1", optional = true }
include_dir = { version = "0.7.3", optional = true }

flo-core.workspace = true
futures.workspace = true

[features]
default = ["bundle_files"]

# Serve style
## Bundle files into executable
bundle_files = ["tower-serve-static", "include_dir"]
## Serve files from disk at runtime
serve_files = []
