[package]
name = "osd-displayport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiwii_serial_protocol_v2 = "0.1.12"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0.1"
thiserror = "1.0.16"
tracing = "0.1.40"