[package]
name = "osd-displayport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiwii_serial_protocol_v2.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
