[package]
name = "platform-uuid"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"

[target.'cfg(any(target_os = "macos"))'.dependencies]
libc = "0.2"

[target.x86_64-pc-windows-msvc.dependencies]
winreg = "0.6"

[target.'cfg(any(target_os = "macos"))'.build-dependencies]
cc = "1"
