[package]
name = "pwm-motor-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
defmt = { version = "0.3.1", optional = true }

[dev-dependencies]
serde_json.workspace = true
eyre.workspace = true

[features]
use-defmt = ["defmt"]
