[package]
name = "sbgc-gimbal"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
log = "0.4.17"
tokio-serial = { package = "kioto-serial", version = "0.1.0" }
tokio = { version = "1", features = [
    "macros",
    "sync",
    "time",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.28"
structure = "0.1.2"
bytes = "1.4.0"
enumflags2 = "0.7.7"
num-traits = "0.2.15"
chrono = { version = "0.4.38", default-features = false }
tracing = { version = "0.1.40", default-features = false }

simplebgc = { path = "../simplebgc" }
simplebgc-derive = { path = "../simplebgc-derive" }
flo-core = { path = "../flo-core" }

[dev-dependencies]
