[package]
name = "sbgc-gimbal"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
tokio-serial = { package = "kioto-serial", version = "0.1.0" }
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "time",
    "rt-multi-thread",
] }
tokio-util = { workspace = true, features = ["codec"] }
futures.workspace = true
bytes.workspace = true
enumflags2.workspace = true
num-traits.workspace = true
chrono.workspace = true
tracing.workspace = true

simplebgc = { path = "../simplebgc" }
simplebgc-derive = { path = "../simplebgc-derive" }
flo-core = { path = "../flo-core" }

[dev-dependencies]
