[package]
name = "sbgc-gimbal"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
tokio-serial.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "time",
    "rt-multi-thread",
] }
tokio-util = { workspace = true, features = ["codec"] }
futures.workspace = true
bytes.workspace = true
enumflags2.workspace = true
num-traits.workspace = true
chrono.workspace = true
tracing.workspace = true

simplebgc.workspace = true
simplebgc-derive.workspace = true
flo-core.workspace = true
