[package]
name = "simplebgc-derive"
version = "0.1.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
syn = "2"
proc-macro-error = "1.0.2"
proc-macro2 = "1.0.12"

[dev-dependencies]
bytes.workspace = true
enumflags2.workspace = true
num-traits.workspace = true
thiserror.workspace = true
