[package]
name = "simplebgc"
version = "0.3.1"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7"
bytes = "1.0.1"
num-traits = "0.2"
num-derive = "0.4"
crc16 = "0.4.0"
paste = "1.0.7"
mashup = "0.1.9"
thiserror = "1.0.16"
simplebgc-derive = { path = "../simplebgc-derive" }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1.40", default-features = false }
