[package]
name = "simplebgc"
version = "0.3.1"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2.workspace = true
bytes.workspace = true
num-traits.workspace = true
num-derive.workspace = true
paste = "1.0.7"
thiserror.workspace = true
simplebgc-derive.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tracing.workspace = true
