[package]
name = "trinamic"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1", features = ["macros", "net", "sync", "io-util"] }
tokio-util = { version = "0.7.4", features = ["net", "codec", "time"] }
tokio-serial = { package = "kioto-serial", version = "0.1.0" }
structure = "0.1.2"

[dev-dependencies]
clap = { version = "4.0.10", features = ["derive"] }
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }
