[package]
name = "trinamic"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "net", "sync", "io-util"] }
tokio-util = { workspace = true, features = ["net", "codec", "time"] }
tokio-serial = { package = "kioto-serial", version = "0.1.0" }
structure = "0.1.2"

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = "0.10.0"
tokio = { workspace = true, features = ["full"] }
