[package]
name = "trinamic"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "net", "sync", "io-util"] }
tokio-util = { workspace = true, features = ["net", "codec", "time"] }
tokio-serial.workspace = true
structure = "0.1.2"

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
