[package]
name = "mavlink-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-panic.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "net",
    "sync",
    "time",
    "rt-multi-thread",
] }

flo-core.workspace = true
flo-mavlink.workspace = true
chrono = { workspace = true, default-features = true }
num-traits.workspace = true
serde_json.workspace = true
